--- a/app/feed/feed.template.html
+++ b/app/feed/feed.template.html
@@ -1,5 +1,5 @@
 <div class="feedContent">
-    <div class="feedSettings lineUp">
+    <div class="feedSettings lineUp" >
         <div class="userInfo">
             <h5> {{user.Name}}</h5>
         </div>
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </div>
-    <div class="feedTape lineUp">
+    <div class="feedTape lineUp" style="width: 100%">
         <div class="tabs">
 
             <a *ngFor="let category of user.Categories"
