--- a/app/auth/index-component.html
+++ b/app/auth/index-component.html
@@ -5,7 +5,7 @@
             <img src="content/images/mainLogo.png" class="indexMainLogo">
         </div>
         <div class="mainDescription mainText">
-            <p>allows you to posts, new or other items from different social networks <br>
+            <p>allows you to post items from different social networks <br>
                 into custom categories and keep it in one place and one format!</p>
         </div>
     </div>
